syncing with PR for ctas with widgets.

--- a/source/assets/scss/views/styleguide.scss
+++ b/source/assets/scss/views/styleguide.scss
@@ -52,7 +52,7 @@ ul.nav-demo {
         padding: 0.55em 0.7em;
     }
     svg {
-        vertical-align: text-top; // ensures alignment with text
+        // vertical-align: text-top; // ensures alignment with text
         padding: 0;
         fill: $white;
     }
