Adding GTM snippets, partial reorg

--- a/source/layouts/company.erb
+++ b/source/layouts/company.erb
@@ -12,6 +12,7 @@
             <%= stylesheet_link_tag "views/"+current_page.data.customCSS %>
         <% end %>
     </head>
+    <%= partial "partials/scripts/google-tm-body" %>
     <body class="<%= page_classes %>">
         <%#= partial "partials/snippets/alert-ribbon" %>
         <div class="container-color--dark-alt">
@@ -28,12 +29,12 @@
         </section>
         <%= yield %>
         <% if build? %>
-            <%# GA %>
-            <%= partial "partials/head/hubspot" %>
-            <%= partial "partials/head/ga" %>
+            <%# Analytics %>
+            <%= partial "partials/scripts/hubspot" %>
+            <%= partial "partials/scripts/ga" %>
         <% end %>
         <%= partial "partials/snippets/footer" %>
-        <%= partial "partials/head/scripts-footer" %>
+        <%= partial "partials/scripts/footer" %>
         <%# Custom JS files %>
         <% if current_page.data.has_key?("customJS") %>
             <% current_page.data.customJS.split(",").each do |filename| %>
