--- a/source/layouts/article.erb
+++ b/source/layouts/article.erb
@@ -12,18 +12,19 @@
             <%= stylesheet_link_tag "views/"+current_page.data.customCSS %>
         <% end %>
     </head>
+    <%= partial "partials/scripts/google-tm-body" %>
     <body class="<%= page_classes %>">
         <%#= partial "partials/snippets/alert-ribbon" %>
         <a name="top"></a>
         <%= partial "partials/snippets/header", :locals => { :style => "dark" } %>
         <%= yield %>
         <% if build? %>
-            <%# GA %>
-            <%= partial "partials/head/hubspot" %>
-            <%= partial "partials/head/ga" %>
+            <%# Analytics %>
+            <%= partial "partials/scripts/hubspot" %>
+            <%= partial "partials/scripts/ga" %>
         <% end %>
         <%= partial "partials/snippets/footer" %>
-        <%= partial "partials/head/scripts-footer" %>
+        <%= partial "partials/scripts/footer" %>
         <%# Custom JS files %>
         <% if current_page.data.has_key?("customJS") %>
             <% current_page.data.customJS.split(",").each do |filename| %>
