--- a/source/layouts/seldon-guide.erb
+++ b/source/layouts/seldon-guide.erb
@@ -1,8 +1,52 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <!-- Meta tags -->
-      <%= partial "partials/head/tags" %>
+      <meta charset="utf-8">
+      <meta http-equiv="x-ua-compatible" content="ie=edge">
+      <meta name="viewport" content="width=device-width,initial-scale=1.0">
+      <title><%= current_page.data.title %></title>
+      <meta name="description" content="<%= current_page.data.summary %>">
+      <% if current_page.data.has_key?("hide_from_sitemap") %>
+          <meta name="robots" content="noindex,nofollow,noodp">
+          <meta name="googlebot" content="noindex,nofollow">
+      <% end %>
+      <meta name="topic" content="<%= current_page.data.title %>">
+      <meta name="classification" content="website">
+      <meta name="url" content="<%= site_url %>">
+      <meta name="keywords" content="heathcare, <%= current_page.data.tags %>">
+      <meta name="coverage" content="Worldwide">
+      <meta name="distribution" content="Global">
+      <meta name="author" content="<%= current_page.data.author %>">
+      <meta property="article:published_time" content="<%= current_page.data.date %>">
+      <meta property="og:description" content="<%= current_page.data.summary %>">
+      <meta property="og:title" content="<%= current_page.data.title %>">
+      <meta itemprop="og:headline" content="<%= current_page.data.title %>" />
+      <% if current_page.data.has_key?("ogType")%>
+          <meta property="og:type" content="<%= current_page.data.ogType %>">
+      <% else %>
+          <meta property="og:type" content="website">
+      <% end %>
+      <meta property="og:url" content="<%= site_url + current_page.url %>">
+      <meta property="og:locale" content="en_US">
+      <meta property="twitter:site" content="<%= twitter_handle %>">
+      <meta property="twitter:creator" content="<%= twitter_handle %>">
+      <meta property="twitter:title" content="<%= current_page.data.title %>">
+      <meta property="twitter:description" content="<%= current_page.data.summary %>">
+      <link rel="canonical" href="<%= site_url + current_page.url %>">
+      <% if current_page.data.has_key?("share_image") %>
+          <meta property="og:image" content="<%= current_page.data.share_image %>">
+          <meta property="twitter:card" content="summary_large_image">
+          <meta property="twitter:image" content="<%= current_page.data.share_image %>">
+      <% elsif current_page.data.has_key?("featured_image") %>
+          <meta property="og:image" content="<%= current_page.data.post_featured_image %>">
+        <meta property="twitter:card" content="summary_large_image">
+          <meta property="twitter:image" content="<%= current_page.data.post_featured_image %>">
+      <% else %>
+          <meta property="og:image" content="<%= image_share_default %>">
+        <meta property="twitter:card" content="summary">
+          <meta property="twitter:image" content="<%= image_share_default %>">
+      <% end %>
+      <link rel="canonical" href="<%= site_url + current_page.url %>">
       <!-- Icons -->
       <%= partial "partials/head/icons" %>
       <!-- Assets -->
@@ -10,93 +54,94 @@
       <% if current_page.data.has_key?("customCSS") %>
           <%= stylesheet_link_tag "views/"+current_page.data.customCSS %>
       <% end %>
-  </head>
-  <body class="<%= page_classes %>">
-    <div class="off-canvas position-right container-gray-2" id="offCanvasRight" data-off-canvas>
-        <div class="callout--trans">
-            <h3 class="headline-4">Seldon Style Guide</h3>
-        </div>
-        <hr class="divider">
-        <ul class="menu vertical">
-            <% sitemap.resources.each do |page| %>
-              <% if page.url =~ /^(\/seldon\/)/ && page.data.is_index != true %>
-                  <li>
-                      <a href="<%= page.url %>" title="<%= page.data.summary %>" class="link--white<% if page.url == current_page.url %> active<% end %>">
-                          <%= page.data.navTitle %>
-                      </a>
-                  </li>
+    </head>
+    <body class="<%= page_classes %>">
+        <div class="off-canvas position-right container-gray-2" id="offCanvasRight" data-off-canvas>
+            <div class="callout--trans">
+                <h3 class="headline-4">Seldon Style Guide</h3>
+            </div>
+            <hr class="divider">
+            <ul class="menu vertical">
+                <% sitemap.resources.each do |page| %>
+                  <% if page.url =~ /^(\/seldon\/)/ && page.data.is_index != true %>
+                      <li>
+                          <a href="<%= page.url %>" title="<%= page.data.summary %>" class="link--white<% if page.url == current_page.url %> active<% end %>">
+                              <%= page.data.navTitle %>
+                          </a>
+                      </li>
+                    <% end %>
                 <% end %>
-            <% end %>
-            <li><hr class="divider"></li>
-            <li><a class="link--white" href="http://foundation.zurb.com/sites/docs/" target="_blank" rel="external">Foundation documentation</a></li>
-            <li><a class="link--white" href="https://middlemanapp.com" target="_blank" rel="external">Middleman Documentation</a></li>
-            <li><a class="link--white" href="/">Main Site (local)</a></li>
-        </ul>
-    </div>
-    <div class="off-canvas-content" data-off-canvas-content>
-        <a href="#top"></a>
-        <header data-interchange="[/public/img/data-distortion-textures-@1x.png, small], [/public/img/data-distortion-textures-@2x.png, large]" class="masthead container-image-fill">
-            <div class="row full-width">
-                <div class="columns small-12">
-                    <div class="group clearfix">
-                        <span class="float-left">
-                            <a href="/" title="Datica Home">
-                                <img class="" src="/public/img/logo-w.svg" alt="Datica Home" />
-                            </a>
-                        </span>
-                        <span class="float-right"><a class="link--white" data-open="offCanvasRight"><i class="fa fa-bars fa-2x"></i></a></span>
+                <li><hr class="divider"></li>
+                <li><a class="link--white" href="http://foundation.zurb.com/sites/docs/" target="_blank" rel="external">Foundation documentation</a></li>
+                <li><a class="link--white" href="https://middlemanapp.com" target="_blank" rel="external">Middleman Documentation</a></li>
+                <li><a class="link--white" href="/">Main Site (local)</a></li>
+            </ul>
+        </div>
+        <div class="off-canvas-content" data-off-canvas-content>
+            <a href="#top"></a>
+            <header data-interchange="[/public/img/data-distortion-textures-@1x.png, small], [/public/img/data-distortion-textures-@2x.png, large]" class="masthead container-image-fill">
+                <div class="row full-width">
+                    <div class="columns small-12">
+                        <div class="group clearfix">
+                            <span class="float-left">
+                                <a href="/" title="Datica Home">
+                                    <img class="" src="/public/img/logo-w.svg" alt="Datica Home" />
+                                </a>
+                            </span>
+                            <span class="float-right"><a class="link--white" data-open="offCanvasRight"><i class="fa fa-bars fa-2x"></i></a></span>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="row align-center">
-                <div class="small-12 medium-9 large-9 columns text-center">
-                    <h3 class="subhead--spaced headline-6">Seldon Style Guide</h3>
-                    <h1 class="headline-1"><%= current_page.data.title %></h1>
-                    <% if current_page.data.has_key?("subhead") %>
-                        <h2 class="headline-4"><%= current_page.data.subhead %></h2>
-                    <% end %>
-                    <p class="lead"><%= current_page.data.summary %></p>
+                <div class="row align-center">
+                    <div class="small-12 medium-9 large-9 columns text-center">
+                        <h3 class="subhead--spaced headline-6">Seldon Style Guide</h3>
+                        <h1 class="headline-1"><%= current_page.data.title %></h1>
+                        <% if current_page.data.has_key?("subhead") %>
+                            <h2 class="headline-4"><%= current_page.data.subhead %></h2>
+                        <% end %>
+                        <p class="lead"><%= current_page.data.summary %></p>
+                    </div>
                 </div>
-            </div>
-        </header>
-        <main>
+            </header>
+            <main>
 
-        <%= yield %>
+            <%= yield %>
 
-        </main>
+            </main>
 
-        <% if current_page.data.is_index != true %>
-            <div class="row section-article">
-                <div class="columns text-center">
-                    <%= partial "partials/snippets/to-top" %>
+            <% if current_page.data.is_index != true %>
+                <div class="row section-article">
+                    <div class="columns text-center">
+                        <%= partial "partials/snippets/to-top" %>
+                    </div>
                 </div>
-            </div>
-        <% end %>
-    </div>
-    <%= javascript_include_tag "svg-injector" %>
-    <script>
-    document.addEventListener("DOMContentLoaded", function(event) {
-        // console.log("DOM fully loaded and parsed");
-        // SVG Injector: turns linked SVGs into inline ones, where they can be styled with CSS> https://www.npmjs.com/package/svg-injector
-        // Elements to inject - needs to happen as early as possible in ops
-        var mySVGsToInject = document.querySelectorAll('img.inject-me');
-        SVGInjector(mySVGsToInject);
-        // console.log("SVG injected");
-    });
+            <% end %>
+        </div>
+        <%#= partial "partials/snippets/footer" %>
+        <!-- Please leave these commented bits in place; when JS compiling is working properly we'll use them. -AW -->
+        
+        <%= javascript_include_tag "svg-injector" %>
+        <script>
+        document.addEventListener("DOMContentLoaded", function(event) {
+            // console.log("DOM fully loaded and parsed");
+            // SVG Injector: turns linked SVGs into inline ones, where they can be styled with CSS> https://www.npmjs.com/package/svg-injector
+            // Elements to inject - needs to happen as early as possible in ops
+            var mySVGsToInject = document.querySelectorAll('img.inject-me');
+            SVGInjector(mySVGsToInject);
+            // console.log("SVG injected");
+        });
 
-    </script>
-<%= javascript_include_tag "jquery", "foundation.min" %>
-<script type="text/javascript">
-$("document").ready(function(){
-    // init foundation stuff - interchange, close box, etc.
-    $(document).foundation();
-});
-</script>
-    <!-- Custom JS files -->
-    <% if current_page.data.has_key?("customJS") %>
-        <% current_page.data.customJS.split(",").each do |filename| %>
-            <script src="<%= filename.strip %>"></script>
+        </script>
+        <%= javascript_include_tag "jquery", "foundation.min" %>
+        <%#= javascript_include_tag "nav", "smooth-scroll", "cookie", "sharer", "all" %>
+        <%#= javascript_include_tag "all" %>
+        <script src="/public/js/all.js"></script>
+
+        <!-- Custom JS files -->
+        <% if current_page.data.has_key?("customJS") %>
+            <% current_page.data.customJS.split(",").each do |filename| %>
+                <script src="<%= filename.strip %>"></script>
+            <% end %>
         <% end %>
-    <% end %>
-  </body>
+    </body>
 </html>
