Updating missing images

--- a/source/events/index.html.erb
+++ b/source/events/index.html.erb
@@ -4,7 +4,7 @@ summary: "Tracking our participation in events throughout healthcare."
 customCSS: "about-us"
 author: "Datica, Inc."
 tags: "events, conferences, presentations, training, education"
-share_image: "/public/img/share-posters/datica-social-twitter-thumb.png"
+share_image: "https://images.contentful.com/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 layout: company
 ---
 <% 
