--- a/source/leadership/index.html.erb
+++ b/source/leadership/index.html.erb
@@ -3,7 +3,7 @@ title: "Datica Leadership Team"
 summary: "The leadership team behind Datica"
 author: "Datica, Inc."
 tags: "leadership, strategy, people"
-share_image: "/public/img/share-posters/datica-social-twitter-thumb.png"
+share_image: "https://images.contentful.com/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 # customCSS: "leadership"
 layout: basic
 ---
