--- a/source/platform/index.html.erb
+++ b/source/platform/index.html.erb
@@ -6,7 +6,7 @@ author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "July 15, 2017"
 ogType: "product"
-share_image: "/public/img/share-posters/datica-social-twitter-thumb.png"
+share_image: "https://images.contentful.com/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 customCSS: "platform"
 layout: platform
 collectionName: "platform"
@@ -41,7 +41,7 @@ priority: "0.9"
             <p>This is what <strong>complete HIPAA compliance in the cloud</strong> looks like.</p>
         </div>
         <div class="columns small-12 large-8">
-            <img class="img-crisp" src="/public/img/platform-overview-diagram-2x.png" alt="Compliance Overview diagram">
+            <img class="img-crisp" src="//images.contentful.com/189dvqdsjh46/peyKlh1GJamkqyMqMom4w/41c87e333c41568955897af2ad49e6ef/platform-overview-diagram_2x.png" alt="Compliance Overview diagram">
         </div>
     </div>
 </section>
