--- a/source/pricing/developer.html.erb
+++ b/source/pricing/developer.html.erb
@@ -4,7 +4,7 @@ summary: "Request information about the Developer Plan on the Datica platform"
 author: "Datica, Inc."
 tags: "developer, application, registration, signup"
 date: "January 1, 2017"
-share_image: "/public/img/share-posters/datica-social-twitter-thumb.png"
+share_image: "https://images.contentful.com/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 customCSS: "contact-us"
 customJS: "/public/js/form.js"
 layout: basic
