--- a/source/contact/thanks.html.erb
+++ b/source/contact/thanks.html.erb
@@ -4,7 +4,7 @@ summary: "A member of the Datica team will be following up"
 author: "Datica, Inc."
 tags: "HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "January 1, 2017"
-share_image: "/public/img/share-posters/datica-social-twitter-thumb.png"
+share_image: "https://images.contentful.com/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 customCSS: "contact-us"
 layout: basic
 ---
