--- a/source/dhsf/index.html.erb
+++ b/source/dhsf/index.html.erb
@@ -4,7 +4,7 @@ summary: "We've simplified the unique complexities of the digital healthcare spa
 author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "July 12, 2017"
-share_image: "/public/img/share-posters/datica-social-twitter-thumb.png"
+share_image: "https://images.contentful.com/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 layout: sparse
 customCSS: "dhsf"
 customJS: "/public/js/dhsf.js"
