--- a/source/discover/index.html.erb
+++ b/source/discover/index.html.erb
@@ -4,7 +4,7 @@ summary: "A Curated Collection of Healthcare Technology Topics from Datica"
 author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "January 1, 2017"
-share_image: "/public/img/share-posters/datica-social-twitter-thumb.png"
+share_image: "https://images.contentful.com/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 layout: basic
 ---
 <% sorted_posts = data.site.discover.to_a.sort_by{ |id, post| post['title'] } %>
