--- a/source/hipaa-compliant-hosting.html.erb
+++ b/source/hipaa-compliant-hosting.html.erb
@@ -4,7 +4,7 @@ summary: "HIPAA compliant hosting is possible and affordable with Datica"
 author: "Datica, Inc."
 tags: "training, education, HIPAA, hosting, HL7, FHIR, interoperability, EHR, integration, resource"
 date: "January 1, 2017"
-share_image: "/public/img/share-posters/datica-social-twitter-thumb.png"
+share_image: "https://images.contentful.com/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 # customCSS:
 layout: basic
 ---
