--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,7 +4,7 @@ summary: "Datica removes the barriers to digital health through compliant infras
 author: "Datica, Inc."
 tags: "training, education, HIPAA, HL7, FHIR, interoperability, EHR, integration, resource"
 date: "January 1, 2017"
-share_image: "/public/img/share-posters/datica-social-twitter-thumb.png"
+share_image: "https://images.contentful.com/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 customCSS: "home"
 layout: "basic"
 # customJS: "/public/js/slick.js, /public/js/slick-config.js, /public/js/DrawSVGPlugin.js, /public/js/animation.js, /public/js/TweenMax.js"
