share image updates

--- a/source/go/subscribe.html.erb
+++ b/source/go/subscribe.html.erb
@@ -4,7 +4,7 @@ summary: "Get the latest updates from the Datica Blog and more — insights from
 author: "Datica, Inc."
 tags: "healthcare, blogs, email, newsletter, HIPAA, HITRUST, certification, hosting"
 date: "April 3, 2017"
-share_image: "/public/img/share-posters/datica-blog-share-poster.jpg"
+share_image: "https://images.contentful.com/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 header: "Subscribe to the Datica Blog"
 subheader: "Insights from the team behind healthcare's trusted cloud"
 layout: basic
