--- a/source/innovation/index.html.erb
+++ b/source/innovation/index.html.erb
@@ -4,7 +4,7 @@ summary: "How does healthcare innovate? Datica explores this topic through new s
 author: "Datica, Inc."
 tags: "HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "January 1, 2017"
-share_image: "/public/img/share-posters/podcast-art-share-h.jpg"
+share_image: "https://images.contentful.com/189dvqdsjh46/at0B5zJqmIk8EAoKqgQww/bc7605c8d6702518cedcedf7cf0de3bb/podcast-art-share-2018.png"
 header: "Datica Innovation"
 subheader: "How does healthcare innovate? Datica explores this topic in a new series of interviews with the industry's top thinkers and doers. Follow along with us as we uncover insights to catalyzing change in healthcare."
 layout: basic
