--- a/source/partials/snippets/_elsewhere.erb
+++ b/source/partials/snippets/_elsewhere.erb
@@ -8,14 +8,14 @@
     <div class="column">
         <aside class="cta cta--image" id="cta-blog">
             <a class="" href="/blog" title="Datica Blog">
-                <img src="/public/img/share-posters/datica-blog-share-poster.jpg" alt="">
+                <img src="https://images.contentful.com/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png" alt="">
             </a>
         </aside>
     </div>
     <div class="column">
         <aside class="cta cta--image" id="cta-podcast">
             <a class="" href="/innovation" title="Datica Healthcare Innovators Podcast">
-                <img src="/public/img/share-posters/podcast-art-share-h.jpg" alt="">
+                <img src="https://images.contentful.com/189dvqdsjh46/at0B5zJqmIk8EAoKqgQww/bc7605c8d6702518cedcedf7cf0de3bb/podcast-art-share-2018.png" alt="">
             </a>
         </aside>
     </div>
