Adding back some images that will change soon; pointed a few more at CF CDN

--- a/source/contact/index.html.erb
+++ b/source/contact/index.html.erb
@@ -36,7 +36,7 @@ layout: basic
                 </blockquote>
                 <div class="media-object card-person">
                     <div class="media-object-section">
-                        <img src="/public/img/people-customers/headshot-michael-roebuck.jpg" class="avatar avatar--large circle" alt="Dr. Michael Roebuck" />
+                        <img src="https://images.contentful.com/189dvqdsjh46/5OFA1wUZqgKWMKOU2C0IEO/42c8b04cff24c4a65d56e63244c76cbe/roebuck-and-petit.jpg<%= image_thumb %>" class="avatar avatar--large circle" alt="Dr. Michael Roebuck" />
                     </div>
                     <div class="media-object-section main-section align-self-middle">
                         <h4 class="person-name">Dr. Michael Roebuck</h4>
