--- a/source/platform/compliance.html.erb
+++ b/source/platform/compliance.html.erb
@@ -70,16 +70,16 @@ priority: "0.9"
             <hr class="divider">
             <div class="row small-up-2 medium-up-4 align-center">
                 <div class="column">
-                    <img class="logo-size--xlarge" src="/public/img/logo-hitrust-certified.png" alt="HITRUST Alliance">
+                    <img class="logo-size--xlarge" src="https://images.contentful.com/189dvqdsjh46/tPI7wEI7zaSEQ2cu6MqOc/7f837591f0a7f85448180a4a1e61158d/logo-hitrust-certified.png?w=300" alt="HITRUST Alliance">
                 </div>
                 <div class="column">
-                    <img class="logo-size--xlarge" src="/public/img/logo-hipaa-federal.png" alt="HIPAA logo">
+                    <img class="logo-size--xlarge" src="https://images.contentful.com/189dvqdsjh46/7twnCUuD72YGS4cusiS6mQ/fa43b0f1faaecb4e8865415add79e538/logo-hipaa-federal.png?w=300" alt="HIPAA logo">
                 </div>
                 <div class="column">
-                    <img class="logo-size--xlarge" src="/public/img/logo-hhs-federal.png" alt="Dept. of Health and Human Services logo">
+                    <img class="logo-size--xlarge" src="https://images.contentful.com/189dvqdsjh46/4l50vQW8xGQo4weC8YK0Oi/5d4fb1e1ebb15b079419960462231833/logo-hhs-federal.png?w=300" alt="Dept. of Health and Human Services logo">
                 </div>
                 <div class="column">
-                    <img class="logo-size--xlarge" src="/public/img/logo-aicpa.png" alt="AICPA logo">
+                    <img class="logo-size--xlarge" src="https://images.contentful.com/189dvqdsjh46/1Tt54MVMgkqIW8OWaYKmoo/7cb2c9e5e3d4f54cbd7498cc7e001fec/logo-aicpa.png?w=300" alt="AICPA logo">
                 </div>
             </div>
         </div>
@@ -95,7 +95,7 @@ priority: "0.9"
     <div class="row align-center group">
         <div class="columns small-12 large-12">
             <%#= daticavg("platform-controls-diagram") %>
-            <img class="img-crisp" data-interchange="[/public/img/platform-hitrust-inheritance.svg, small], [/public/img/platform-hitrust-inheritance.png, medium]" alt="platform-controls-diagram">
+            <img class="img-crisp" data-interchange="[https://images.contentful.com/189dvqdsjh46/fE9OrSoh0sa04GGIeUA6y/1ec20a7821aaf7c388f891786139e088/platform-hitrust-inheritance.png?w=640, small], [https://images.contentful.com/189dvqdsjh46/fE9OrSoh0sa04GGIeUA6y/1ec20a7821aaf7c388f891786139e088/platform-hitrust-inheritance.png, medium]" alt="platform-controls-diagram">
             <hr class="divider">
         </div>
     </div>
@@ -164,7 +164,7 @@ priority: "0.9"
             </div>
             <div class="media-object card-person">
                 <div class="media-object-section">
-                    <img src="/public/img/people-customers/headshot-eligible.jpg" class="avatar avatar--large circle" alt="Katelyn Gleason" />
+                    <img src="https://images.contentful.com/189dvqdsjh46/2gYOoWVhOEYW4IMAOIeyS0/599f8ca6d3642c732f3f003769563781/headshot-eligible.jpg?w=128" class="avatar avatar--large circle" alt="Katelyn Gleason" />
                 </div>
                 <div class="media-object-section main-section align-self-middle">
                     <h4 class="person-name">Katelyn Gleason</h4>
