--- a/source/platform/index.html.erb
+++ b/source/platform/index.html.erb
@@ -41,7 +41,7 @@ priority: "0.9"
             <p>This is what <strong>complete HIPAA compliance in the cloud</strong> looks like.</p>
         </div>
         <div class="columns small-12 large-8">
-            <img class="img-crisp" src="//images.contentful.com/189dvqdsjh46/peyKlh1GJamkqyMqMom4w/41c87e333c41568955897af2ad49e6ef/platform-overview-diagram_2x.png" alt="Compliance Overview diagram">
+            <img class="img-crisp" src="//images.contentful.com/189dvqdsjh46/1zXwr2EWQoMkIskG68y8Qk/9b634cd5b8a778dc4fc7ae51d6a11239/platform-overview-diagram-2x.png" alt="Compliance Overview diagram">
         </div>
     </div>
 </section>
@@ -71,7 +71,7 @@ priority: "0.9"
     </div>
     <div class="row align-center">
         <div class="small-12 large-11">
-            <div class="row align-justify align-middle platform-bg-bridge" data-interchange="[/public/img/bg/datica-bridge-w.png, medium]">
+            <div class="row align-justify align-middle platform-bg-bridge" data-interchange="[https://images.contentful.com/189dvqdsjh46/5HcbN9TcZyESeyIw0uK2GC/870332a9c45bedbcea4da46174548748/datica-bridge-w.png, medium]">
                 <div class="columns small-12 medium-5 large-5 text-center">
                     <div class="card drop">
                         <div class="card-section">
@@ -163,7 +163,7 @@ priority: "0.9"
     <div class="row group">
         <div class="column text-center">
             <div class="group">
-                <img class="log-size--medium" src="/public/img/apn-tech-small.png" alt="apn tech">
+                <img class="log-size--medium" src="https://d1.awsstatic.com/partner-network/APN-Advanced-Technology-Badge.d737de9106285590a46875b8805247f22f8433ba.png" alt="apn tech">
             </div>
             <p>Datica is an <strong>Amazon Web Services Advanced Tier Technology Partner</strong> with a <strong>Healthcare Competency</strong> focus.</p>
         </div>
