local to contentful

--- a/source/open-source/policies.html.erb
+++ b/source/open-source/policies.html.erb
@@ -72,7 +72,7 @@ layout: "basic"
                 <p>I think this could be revolutionary in helping the industry as a whole collaborate to improve privacy and security practices by gathering information from the highest level security/privacy experts in the field and making it available via similar open source methods."</em></p>
                 <div class="column media-object card-person">
                     <div class="media-object-section">
-                        <img src="/public/img/people-customers/headshot-eligible.jpg" class="avatar avatar--large circle" alt="Katelyn Gleason" />
+                        <img src="https://images.contentful.com/189dvqdsjh46/2gYOoWVhOEYW4IMAOIeyS0/599f8ca6d3642c732f3f003769563781/headshot-eligible.jpg<%= image_thumb %>" class="avatar avatar--large circle" alt="Katelyn Gleason" />
                     </div>
                     <div class="media-object-section main-section align-self-middle">
                         <h4 class="person-name">Katelyn Gleason</h4>
