--- a/source/pricing/growth.html.erb
+++ b/source/pricing/growth.html.erb
@@ -36,7 +36,7 @@ layout: basic
                 </blockquote>
                 <div class="media-object card-person">
                     <div class="media-object-section">
-                        <img src="/public/img/people-customers/headshot-metabahn-bryan.jpg" class="avatar avatar--large circle" alt="Bryan Powell" />
+                        <img src="https://images.contentful.com/189dvqdsjh46/4eBm8xpZcIACMoCA2sAe6u/997f730355b2db7e47bfead0e57e6330/headshot-metabahn-bryan.jpg<%= image_thumb %>" class="avatar avatar--large circle" alt="Bryan Powell" />
                     </div>
                     <div class="media-object-section main-section align-self-middle">
                         <h4 class="person-name">Bryan Powell</h4>
