--- a/source/services/index.html.erb
+++ b/source/services/index.html.erb
@@ -135,7 +135,7 @@ priority: "0.9"
                 <blockquote class="quote--serif">The team at Datica understands the rapid changes affecting healthcare. They were able to help us identify data integration strategies to create efficiencies, cost savings, and foster our culture of innovation. They help me navigate the crowded digital health landscape.</blockquote>
                 <div class="media-object card-person">
                     <div class="media-object-section">
-                        <img src="/public/img/people-customers/headshot-gregory-ator.jpg" class="avatar avatar--large circle" alt="Dr. Gregory Ator"/>
+                        <img src="https://images.contentful.com/189dvqdsjh46/7rIGE2x6zSQqqK0CsKaoQ/4d5c4a23339417bd8052c0f3337b7372/010418d.jpg<%= image_thumb %>" class="avatar avatar--large circle" alt="Dr. Gregory Ator"/>
                     </div>
                     <div class="media-object-section main-section align-self-middle">
                         <h4 class="person-name">Dr. Gregory Ator</h4>
