--- a/source/platform/integration.html.erb
+++ b/source/platform/integration.html.erb
@@ -208,7 +208,7 @@ ctaCustom: true
         </div>
     </div>
 </section>
-<section class="section-article section--cta-blue container-image--center" data-interchange="[/public/img/bg/platform-integration-inverted-bg.png, medium]">
+<section class="section-article section--cta-blue container-image--center" data-interchange="[https://images.contentful.com/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png, medium]">
     <div class="row align-center">
         <div class="columns small-12 large-8">
             <aside class="text-center">
@@ -252,7 +252,7 @@ ctaCustom: true
                 </blockquote>
                 <div class="media-object card-person">
                     <div class="media-object-section">
-                        <img src="/public/img/people-customers/headshot-zipnosis.jpg" class="avatar avatar--large circle" alt="Jon Pearce"/>
+                        <img src="https://images.contentful.com/189dvqdsjh46/6IUA5I8suWEWI28YcIkMgm/134af76338fd572e45a9d4a716a8ddb7/headshot-zipnosis.jpg" class="avatar avatar--large circle" alt="Jon Pearce"/>
                     </div>
                     <div class="media-object-section main-section align-self-middle">
                         <h4 class="person-name">Jon Pearce</h4>
