--- a/source/pricing/enterprise.html.erb
+++ b/source/pricing/enterprise.html.erb
@@ -37,7 +37,7 @@ layout: basic
                 </blockquote>
                 <div class="media-object card-person">
                     <div class="media-object-section">
-                        <img src="/public/img/people-customers/headshot-healthloop.jpg" class="avatar avatar--large circle" alt="Mayank Thanawala" />
+                        <img src="https://images.contentful.com/189dvqdsjh46/3MFChiuZUcUC8eoYaaOIoK/183b59fba0ac0f05675ef7cf777fa20c/headshot-healthloop.jpg<%= image_thumb %>" class="avatar avatar--large circle" alt="Mayank Thanawala" />
                     </div>
                     <div class="media-object-section main-section align-self-middle">
                         <h4 class="person-name">Mayank Thanawala</h4>
