--- a/source/press/index.html.erb
+++ b/source/press/index.html.erb
@@ -10,7 +10,7 @@ subheader: "Company Info, Press Releases, Coverage"
 layout: company
 ---
 
-<section class="section-article container-color--dark container-image--fixed" data-interchange="[/public/img/background-press.jpg, small]">
+<section class="section-article container-color--dark container-image--fixed" data-interchange="[https://images.contentful.com/189dvqdsjh46/3zZ0FS37NuWEagqyQuoowQ/700afbf86e486e4d251bf816448719e7/background-press.jpg, small]">
     <div class="row align-center">
         <div class="columns small-12 large-6 text-center">
             <h4 class="headline-6 subheader--spaced-out text--yellow-glow">Press</h4>
