--- a/source/press/mediakit.html.erb
+++ b/source/press/mediakit.html.erb
@@ -96,13 +96,13 @@ layout: basic
                     <p class="">A textured background or image is acceptable if it is not too busy. Use sparingly.</p>
                 </div>
                 <div class="column">
-                    <div class="callout--dark drop text-center container-image-fill" data-interchange="[/public/img/wood-texture.jpg, small]">
+                    <div class="callout--dark drop text-center container-image-fill" data-interchange="[https://images.contentful.com/189dvqdsjh46/5GU4ni622cU4I4iuuCIIqW/066414842383deda438861c4e8c72ae7/wood-texture.jpg, small]">
                         <img src="/public/img/mediakit/datica-logo-white.png" alt="datica logo" />
                         <p>Acceptable contrast here.</p>
                     </div>
                 </div>
                 <div class="column">
-                    <div class="callout drop text-center container-image-fill" data-interchange="[/public/img/wood-texture.jpg, small]">
+                    <div class="callout drop text-center container-image-fill" data-interchange="[https://images.contentful.com/189dvqdsjh46/5GU4ni622cU4I4iuuCIIqW/066414842383deda438861c4e8c72ae7/wood-texture.jpg, small]">
                         <img src="/public/img/mediakit/datica-logo-vertical-white.png" alt="datica logo" />
                     </div>
                 </div>
