--- a/source/about/index.html.erb
+++ b/source/about/index.html.erb
@@ -9,7 +9,7 @@ customCSS: "about-us"
 layout: company
 ---
 
-<section class="section-article container-color--dark container-image--fixed" data-interchange="[/public/img/background-about-us.jpg, small]">
+<section class="section-article container-color--dark container-image--fixed" data-interchange="[https://images.contentful.com/189dvqdsjh46/3eF64DVasUAAKacOwWqmce/f63c1ea700487b2d8bda2a8110fac69e/background-about-us.jpg, small]">
     <div class="row align-center">
         <div class="columns small-12 large-8 text-center">
             <h4 class="headline-6 subheader--spaced-out text--yellow-glow">About Us</h4>
