--- a/source/careers.html.erb
+++ b/source/careers.html.erb
@@ -14,7 +14,7 @@ layout: "company"
         font-family: "GT-America", "Roboto", sans-serif;
     }
 </style>
-<section class="section-article container-color--dark container-image--fixed" data-interchange="[/public/img/background-events.jpg, small]">
+<section class="section-article container-color--dark container-image--fixed" data-interchange="[https://images.contentful.com/189dvqdsjh46/XrCee61laEeWoWoS6CAcI/87fd440f962b520710059ad071b869cb/background-events.jpg, small]">
     <div class="row align-center">
         <div class="columns small-12 large-8 text-center">
             <h4 class="headline-6 subheader--spaced-out text--yellow-glow">Careers</h4>
