--- a/source/leadership.html.erb
+++ b/source/leadership.html.erb
@@ -17,7 +17,7 @@ sorted_daticans  = data.site.person.to_a.sort_by{ |id, person| person['slug'] }
 %>
 
 
-<section class="section-article container-color--dark container-image--fixed" data-interchange="[/public/img/background-about-us.jpg, small]">
+<section class="section-article container-color--dark container-image--fixed" data-interchange="[https://images.contentful.com/189dvqdsjh46/3eF64DVasUAAKacOwWqmce/f63c1ea700487b2d8bda2a8110fac69e/background-about-us.jpg, medium]">
     <div class="row align-center">
         <div class="columns small-12 large-6 text-center">
             <h4 class="headline-6 subheader--spaced-out text--yellow-glow">Leadership</h4>
