--- a/source/about/index.html.erb
+++ b/source/about/index.html.erb
@@ -225,11 +225,11 @@ layout: company
     <div class="row align-center">
         <div class="columns small-12 medium-8 text-center">
             <h2 class="headline-3">A Strong Backing</h2>
-            <div class="row small-up-2 medium-up-4">
-                <div class="column"><img src="/public/img/investors/av-logo.png" alt="Arthur Ventures"></div>
-                <div class="column"><img src="/public/img/investors/bc-logo.png" alt="Baird Ventures"></div>
-                <div class="column"><img src="/public/img/investors/cv-logo.png" alt="Chicago Ventures"></div>
-                <div class="column"><img src="/public/img/investors/lavc-logo.png" alt="Lewis and Clark Ventures"></div>
+            <div class="row small-up-2 medium-up-4 align-middle">
+                <div class="column"><img class="logo-size--large" src="https://images.contentful.com/189dvqdsjh46/4cObssAG4goygs6kYoggm6/125b40ff261847103d0d9c9fc22d4393/av-logo.png?h=60" alt="Arthur Ventures"></div>
+                <div class="column"><img class="logo-size--large" src="https://images.contentful.com/189dvqdsjh46/54MNeLPfOM68gyIya8sySU/1ae051e26424b0888c0bb93d8d3ba0b3/bc-logo.png?h=60" alt="Baird Ventures"></div>
+                <div class="column"><img class="logo-size--large" src="https://images.contentful.com/189dvqdsjh46/4BIGV3EJ9SmayOc8YOyeui/f38bf67be633f330fa5470de6e55bd34/cv-logo.png?h=60" alt="Chicago Ventures"></div>
+                <div class="column"><img class="logo-size--large" src="https://images.contentful.com/189dvqdsjh46/6bhxfVnDKEUmWcC28Esk4I/9ff2c80e24438b3356e58470f9b61f9f/lavc-logo.png?h=60" alt="Lewis and Clark Ventures"></div>
             </div>
         </div>
     </div>
