--- a/source/contentful_templates/discover.html.erb
+++ b/source/contentful_templates/discover.html.erb
@@ -179,7 +179,7 @@ end
 
             <div class="row align-center">
                 <div class="columns small-12 medium-3 large-2 show-for-medium">
-                    <img class="group" alt="Datica Whitepapers" data-interchange="[/public/img/art/art-whitepapers-bulb.png, small]">
+                    <img class="group" alt="Datica Whitepapers" data-interchange="[https://images.contentful.com/189dvqdsjh46/4OxiTrPw4MY68q6iuwgoKE/184587a2732fe2eae7871918da9a6028/art-whitepapers-bulb.png, small]">
                 </div>
                 <div class="columns small-12 medium-9 large-8">
                     <h3 class="discover--section-header"><%= p["title"] %>: <span class="discover--category">White Papers</span></h3>
