--- a/source/innovation/index.html.erb
+++ b/source/innovation/index.html.erb
@@ -70,7 +70,7 @@ customCSS: "innovation"
     </div>
 </section>
     <% sorted_podcasts = data.site.podcast.to_a.sort_by{ |id, podcast| podcast['pub_date'] }.reverse! %>
-    <section data-magellan-target="discoverInnovation" id="discoverInnovation" class="discover--podcast section-article container-color--dark-alt container-image--middle" data-interchange="[/public/img/art/art-sound-bars-purple.svg, small]">
+    <section data-magellan-target="discoverInnovation" id="discoverInnovation" class="discover--podcast section-article container-color--dark-alt container-image--middle" data-interchange="[https://images.contentful.com/189dvqdsjh46/19d5iulqaYg8ACWcYQ6Im6/3f883ec8f77add5b22a497e3b3d63e6d/art-sound-bars-purple.svg, small]">
         <div class="row align-center collapse">
             <div class="columns small-12 large-10">
                 <h3 class="innovation--section-header">Healthcare Innovators <span class="innovation--category">Podcast</span></h3>
