--- a/source/podcast/index.html.erb
+++ b/source/podcast/index.html.erb
@@ -10,7 +10,7 @@ subheader: "How does healthcare innovate? Datica explores this topic in a new se
 layout: basic
 customCSS: "podcast"
 ---
-<div class="container-color--dark-alt container-image--bottom" data-interchange="[/public/img/art/art-sound-bars-bg.svg, small]">
+<div class="container-color--dark-alt container-image--bottom" data-interchange="[https://images.contentful.com/189dvqdsjh46/5OUXo4nQ6kaqAsqE8McqIu/fcd84d36da7ad0c4b91ecb9cadb7ce87/art-sound-bars-bg.svg, small]">
     <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
     <section class="section-article">
         <div class="row">
