--- a/source/hipaa-compliant-web-hosting.html.erb
+++ b/source/hipaa-compliant-web-hosting.html.erb
@@ -32,7 +32,7 @@ layout: basic
             </div>
         </div>
         <div class="columns small-12 medium-6 text-left small-order-2 large-order-1">
-            <img class="image-medium" src="/public/img/HITRUST2015.png" alt="Datica is HITRUST CSF Certified"/>
+            <img class="image-medium" src="https://images.contentful.com/189dvqdsjh46/tPI7wEI7zaSEQ2cu6MqOc/7f837591f0a7f85448180a4a1e61158d/logo-hitrust-certified.png" alt="Datica is HITRUST CSF Certified"/>
             <h3>Datica is HITRUST CSF Certified</h3>
         </div>
     </div>
