Removed GA snippet; conditional wrapped around GTM tag snippets. Only called from layouts now.

--- a/source/layouts/basic.erb
+++ b/source/layouts/basic.erb
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <% if build? %><%= partial "partials/scripts/google-tm-head" %><% end %>
         <%# Meta tags %>
         <%= partial "partials/head/tags" %>
         <%# Icons %>
@@ -12,14 +13,13 @@
             <%= stylesheet_link_tag "views/"+current_page.data.customCSS %>
         <% end %>
     </head>
-    <%= partial "partials/scripts/google-tm-body" %>
+    <% if build? %><%= partial "partials/scripts/google-tm-body" %><% end %>
     <body class="<%= page_classes %>">
         <%#= partial "partials/snippets/alert-ribbon" %>
         <%= yield %>
         <% if build? %>
             <%# Analytics %>
             <%= partial "partials/scripts/hubspot" %>
-            <%= partial "partials/scripts/ga" %>
         <% end %>
         <%= partial "partials/snippets/footer" %>
         <%= partial "partials/scripts/footer" %>
